Segmented Switcher の追加、各種リファクタ

--- a/packages/core/src/_base-style.scss
+++ b/packages/core/src/_base-style.scss
@@ -44,6 +44,10 @@
   --bm-switcher-border-width: #{$bm-switcher-border-width};
   --bm-switcher-padding: #{$bm-switcher-padding};
 
+  --bm-segmented-switcher-radius: #{$bm-segmented-switcher-radius};
+  --bm-segmented-switcher-border-width: #{$bm-segmented-switcher-border-width};
+  --bm-segmented-switcher-padding: #{$bm-segmented-switcher-padding};
+
   --bm-navigation-list-padding-tb: #{$bm-navigation-list-padding-tb};
   --bm-navigation-list-padding-lr: #{$bm-navigation-list-padding-lr};
   --bm-navigation-list-item-padding-tb: #{$bm-navigation-list-item-padding-tb};
