--- a/packages/core/src/_variables.scss
+++ b/packages/core/src/_variables.scss
@@ -48,6 +48,11 @@ $bm-switcher-radius: 6px !default;
 $bm-switcher-border-width: 1px !default;
 $bm-switcher-padding: 2px !default;
 
+// Segmented Switcher
+$bm-segmented-switcher-radius: 6px !default;
+$bm-segmented-switcher-border-width: 1px !default;
+$bm-segmented-switcher-padding: 2px !default;
+
 // Navigation List
 
 $bm-navigation-list-padding-tb: 0 !default;
