--- a/packages/core/src/form-items/segmented-switcher/_SegmentedSwitcher.scss
+++ b/packages/core/src/form-items/segmented-switcher/_SegmentedSwitcher.scss
@@ -1,10 +1,11 @@
 $name: 'bm-c-segmented-switcher';
 
 .#{$name} {
-  --bm-switchable-radius: 6px;
-  --bm-switchable-border-width: 1px;
-  --bm-switchable-padding: 2px;
+  --bm-switchable-radius: var(--bm-segmented-switcher-radius);
+  --bm-switchable-border-width: var(--bm-segmented-switcher-border-width);
+  --bm-switchable-padding: var(--bm-segmented-switcher-padding);
   display: inline-block;
+  user-select: none;
 
   .#{$name}__inner {
     position: relative;
@@ -29,7 +30,62 @@ $name: 'bm-c-segmented-switcher';
     }
   }
 
-  & .#{$name}__button {
-    padding: var(--bm-button-padding-tb) var(--bm-button-padding-lr);
+  &:not(.-pending) .#{$name}__item {
+    background: rgba(var(--bm-secondary-rgb), 0);
+    box-shadow: none;
   }
+
+  &:not(.-pending) .#{$name}__item:not(.-disabled, .-selected):hover {
+    background: rgba(var(--bm-secondary-rgb), 0.35);
+    box-shadow: inset 0 0 1px rgba(198, 198, 198, 0.5);
+  }
+
+  &:not(.-pending) .#{$name}__item:not(.-disabled, .-selected):active {
+    background: rgba(var(--bm-secondary-rgb), 0.5);
+    box-shadow: inset 0 0 1px rgba(198, 198, 198, 0.5);
+  }
+
+  &:not(.-pending) .#{$name}__item.-selected {
+    box-shadow: 0 0 1px rgba(var(--bm-pushable-shadow-rgb), 0.3), 0 1px 2px rgba(var(--bm-pushable-shadow-rgb), 0.2),
+      inset 0 -1px 1px var(--bm-pushable-inner-shadow-color);
+    background: rgba(var(--bm-primary-rgb), 0.85);
+  }
+
+  &:not(.-pending) .#{$name}__item:not(.-disabled).-selected:active {
+    box-shadow: 0 0 1px rgba(var(--bm-pushable-shadow-rgb), 0.3);
+    background: rgba(var(--bm-primary-dim-rgb), 0.85);
+  }
+
+  &:not(.-pending) .#{$name}__item.-selected.-disabled {
+    box-shadow: none;
+    background: rgba(var(--bm-primary-rgb), 0.85);
+  }
+}
+
+.#{$name}__item {
+  display: block;
+  padding: var(--bm-button-padding-tb) var(--bm-button-padding-lr);
+  border-radius: calc(
+    var(--bm-segmented-switcher-radius) - var(--bm-segmented-switcher-border-width) -
+      var(--bm-segmented-switcher-padding)
+  );
+
+  &.-disabled {
+    color: rgba(var(--bm-foreground-rgb), 0.4);
+  }
+
+  > input {
+    opacity: 0;
+    z-index: -1;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
+
+.#{$name}__bar {
+  border-radius: calc(
+    var(--bm-segmented-switcher-radius) - var(--bm-segmented-switcher-border-width) -
+      var(--bm-segmented-switcher-padding)
+  );
 }
