--- a/packages/core/src/basement-ui.scss
+++ b/packages/core/src/basement-ui.scss
@@ -6,6 +6,5 @@
 @use 'style-element/blur';
 @use 'style-element/text-input';
 @use 'style-element/focusable';
-@use 'style-element/switchable';
-@use 'style-element/list';
+@use 'style-element/card';
 @use 'all-components';
