--- a/packages/core/src/_all-components.scss
+++ b/packages/core/src/_all-components.scss
@@ -1,12 +1,17 @@
 @use './component/alert/_Alert.scss';
-@use './component/alert/_AlertContent.scss';
-@use './component/alert/_AlertFooter.scss';
 @use './component/navigation-list/_NavigationList.scss';
+@use './component/tooltip/_Tooltip.scss';
 @use './form-items/button/_Button.scss';
 @use './form-items/checkbox/_Checkbox.scss';
 @use './form-items/radio/_Radio.scss';
 @use './form-items/segmented-switcher/_SegmentedSwitcher.scss';
 @use './form-items/switcher/_Switcher.scss';
+@use './element/alert-content/_AlertContent.scss';
+@use './element/alert-content/_AlertFooter.scss';
+@use './element/list/_List.scss';
+@use './element/list/_ListContainer.scss';
+@use './element/list/_ListItem.scss';
+@use './element/list/_ListSeparator.scss';
 @use './element/markable/_Markable.scss';
-@use './element/switcher/_Switchable.scss';
+@use './element/switchable/_Switchable.scss';
 @use './element/window-base/_WindowBase.scss';
