--- a/packages/core/src/_base-style.scss
+++ b/packages/core/src/_base-style.scss
@@ -48,11 +48,16 @@
   --bm-segmented-switcher-border-width: #{$bm-segmented-switcher-border-width};
   --bm-segmented-switcher-padding: #{$bm-segmented-switcher-padding};
 
+  --bm-alert-content-gap: #{$bm-alert-content-gap};
+
   --bm-navigation-list-padding-tb: #{$bm-navigation-list-padding-tb};
   --bm-navigation-list-padding-lr: #{$bm-navigation-list-padding-lr};
   --bm-navigation-list-item-padding-tb: #{$bm-navigation-list-item-padding-tb};
   --bm-navigation-list-item-padding-lr: #{$bm-navigation-list-item-padding-lr};
   --bm-navigation-list-item-radius: #{$bm-navigation-list-item-radius};
+
+  --bm-tooltip-padding: #{$bm-tooltip-padding};
+  --bm-tooltip-radius: #{$bm-tooltip-radius};
 }
 
 .bm-base {
