アニメーションの処理を再度修正

--- a/packages/core/src/_base-style.scss
+++ b/packages/core/src/_base-style.scss
@@ -58,6 +58,7 @@
 
   --bm-tooltip-padding: #{$bm-tooltip-padding};
   --bm-tooltip-radius: #{$bm-tooltip-radius};
+  --bm-tooltip-animation-duration: #{$bm-tooltip-animation-duration};
 }
 
 .bm-base {
