--- a/packages/core/src/_variables.scss
+++ b/packages/core/src/_variables.scss
@@ -67,3 +67,4 @@ $bm-navigation-list-item-radius: 5px !default;
 
 $bm-tooltip-padding: 4px !default;
 $bm-tooltip-radius: 5px !default;
+$bm-tooltip-animation-duration: 1s !default;
