--- a/packages/core/src/component/window/_Window.scss
+++ b/packages/core/src/component/window/_Window.scss
@@ -14,10 +14,9 @@ $name: 'bm-c-window';
   }
 
   &.-closing {
-    animation-name: bm-window-show;
+    animation-name: bm-window-hide;
     animation-duration: 0.2s;
     animation-fill-mode: forwards;
-    animation-direction: reverse;
   }
 }
 
@@ -29,5 +28,16 @@ $name: 'bm-c-window';
   100% {
     opacity: 1;
     transform: scaleX(100%) scaleY(100%);
+  }
+}
+
+@keyframes bm-window-hide {
+  0% {
+    opacity: 1;
+    transform: scaleX(100%) scaleY(100%);
+  }
+  100% {
+    opacity: 0;
+    transform: scaleX(95%) scaleY(95%);
   }
 }
