--- a/packages/core/src/basement-ui.scss
+++ b/packages/core/src/basement-ui.scss
@@ -7,4 +7,5 @@
 @use 'style-element/text-input';
 @use 'style-element/focusable';
 @use 'style-element/card';
+@use 'style-element/header/Header';
 @use 'all-components';
