色合いとかを見直した

--- a/packages/core/src/component/window/_Window.scss
+++ b/packages/core/src/component/window/_Window.scss
@@ -29,6 +29,7 @@ $name: 'bm-c-window';
   position: absolute;
   --bm-button-padding-tb: 0;
   --bm-button-padding-lr: 0;
+  z-index: 1000;
 
   &.-left {
     left: 0;
