--- a/packages/core/src/element/gauge/_Gauge.scss
+++ b/packages/core/src/element/gauge/_Gauge.scss
@@ -1,10 +1,11 @@
 $name: 'bm-e-gauge';
 
 .#{$name} {
-  height: var(--bm-gauge-height, 10px);
+  height: var(--bm-gauge-height, 14px);
   border-radius: var(--bm-gauge-radius, 5px);
   border: var(--bm-gauge-border-width, 2px) solid rgba(var(--bm-border-rgb), 0.85);
   background-color: rgba(var(--bm-secondary-rgb), 0.4);
+  box-sizing: border-box;
 }
 
 .#{$name}__filler {
@@ -25,6 +26,8 @@ $name: 'bm-e-gauge';
 
   &.-gradient {
     background-image: linear-gradient(-90deg, rgb(var(--bm-tint-rgb)), rgb(var(--bm-tint-dim-rgb)));
+    background-size: 170% 100%;
+    background-position: top right;
   }
 
   &.-animated {
