--- a/packages/core/src/style-element/card/_Background.scss
+++ b/packages/core/src/style-element/card/_Background.scss
@@ -1,5 +1,5 @@
-@use '../variables' as *;
-@use '../util/scss-util' as util;
+@use '../../variables' as *;
+@use '../../util/scss-util' as util;
 
 .bm-a-bg-lv4 {
   background-color: rgba(var(--bm-base-rgb), 1);
