--- a/packages/core/src/basement-ui.scss
+++ b/packages/core/src/basement-ui.scss
@@ -1,11 +1,11 @@
 @use 'variables' as *;
 @forward 'base-style';
-@use 'style-element/background';
+@use 'style-element/card/Background';
 @use 'style-element/pushable';
-@use 'style-element/shadow';
-@use 'style-element/blur';
+@use 'style-element/card/Shadow';
+@use 'style-element/card/Blur';
 @use 'style-element/text-input';
 @use 'style-element/focusable';
-@use 'style-element/card';
+@use 'style-element/card/Card';
 @use 'style-element/header/Header';
 @use 'all-components';
