--- a/packages/core/src/_variables.scss
+++ b/packages/core/src/_variables.scss
@@ -72,3 +72,12 @@ $bm-tooltip-animation-duration: 1s !default;
 
 $bm-window-radius: 5px !default;
 $bm-window-animation-duration: 0.2s !default;
+
+$bm-menu-list-padding-tb: 5px !default;
+$bm-menu-list-padding-lr: 5px !default;
+$bm-menu-list-radius: 4px !default;
+$bm-menu-list-item-padding-tb: 2px !default;
+$bm-menu-list-item-padding-lr: 10px !default;
+$bm-menu-list-item-radius: 2px !default;
+$bm-menu-list-separator-margin-tb: 6px !default;
+$bm-menu-list-separator-margin-lr: 0 !default;
