メニューコンポーネント追加

--- a/packages/core/src/_base-style.scss
+++ b/packages/core/src/_base-style.scss
@@ -70,6 +70,7 @@
   --bm-menu-list-item-padding-tb: #{$bm-menu-list-item-padding-tb};
   --bm-menu-list-item-padding-lr: #{$bm-menu-list-item-padding-lr};
   --bm-menu-list-item-radius: #{$bm-menu-list-item-radius};
+  --bm-menu-list-item-gap: #{$bm-menu-list-item-gap};
   --bm-menu-list-separator-margin-tb: #{$bm-menu-list-separator-margin-tb};
   --bm-menu-list-separator-margin-lr: #{$bm-menu-list-separator-margin-lr};
 }
