--- a/packages/core/src/element/list/_ListItem.scss
+++ b/packages/core/src/element/list/_ListItem.scss
@@ -33,6 +33,10 @@ $name: 'bm-e-list-item';
 
   .#{$name}__secondary {
     color: rgba(var(--bm-foreground-rgb), 0.6);
+
+    .bm-e-symbol {
+      fill: rgba(var(--bm-foreground-rgb), 0.6);
+    }
   }
 }
 
@@ -42,6 +46,10 @@ $name: 'bm-e-list-item';
 
   .#{$name}__secondary {
     color: rgba(var(--bm-foreground-rgb-2), 0.6);
+
+    .bm-e-symbol {
+      fill: rgba(var(--bm-foreground-rgb-2), 0.6);
+    }
   }
 }
 
