--- a/packages/core/src/component/menu-list/_MenuList.scss
+++ b/packages/core/src/component/menu-list/_MenuList.scss
@@ -2,6 +2,17 @@ $name: 'bm-c-menu-list';
 
 .#{$name} {
   width: max-content;
+  position: relative;
+
+  &.-opening {
+    animation-name: bm-menu-show;
+    animation-duration: var(--bm-window-animation-duration);
+    animation-fill-mode: forwards;
+  }
+}
+
+.#{$name}__inner {
+  width: max-content;
   --bm-list-padding-tb: var(--bm-menu-list-padding-tb);
   --bm-list-padding-lr: var(--bm-menu-list-padding-lr);
   --bm-card-radius: var(--bm-menu-list-radius);
@@ -16,17 +27,17 @@ $name: 'bm-c-menu-list';
   svg {
     vertical-align: middle;
   }
+
+  &.-absolute {
+    position: absolute;
+  }
 }
 
-.#{$name}.-submenu {
-  position: absolute;
-}
-
-.#{$name}:not(.-submenu).-relative {
-  position: relative;
-}
-
-.#{$name}.-pending {
-  //visibility: hidden;
-  opacity: 0;
+@keyframes bm-menu-show {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
