--- a/packages/core/src/layout/flex-stack/_FlexStack.scss
+++ b/packages/core/src/layout/flex-stack/_FlexStack.scss
@@ -33,6 +33,23 @@ $name: 'bm-l-flex-stack';
   &.-center {
     justify-content: center;
   }
+
+  &.-align-center{
+    align-items: center;
+  }
+
+  &.-align-start{
+    align-items: start;
+  }
+
+  &.-align-end{
+    align-items: end;
+  }
+
+  &.-align-stretch{
+    align-items: stretch;
+  }
+
 }
 
 .#{$name} > .#{$name}__item {
